settings: Fix flickering of icon when hovering on discard button.
The color of "x" icon in "Discard" button flickers when hovering
over the button. This commit fixes it by just adding the hover
color to the text and not icon which was anyways set to original
color using different selector which was the cause of flickering.

--- a/static/styles/app_components.css
+++ b/static/styles/app_components.css
@@ -763,10 +763,9 @@ div.overlay {
         &:hover,
         &:focus {
             border: 1px solid hsl(0, 0%, 61%);
-            color: hsl(0, 0%, 18%);
 
-            .save-discard-widget-button-icon {
-                color: hsl(0, 0%, 47%);
+            .discard-button.save-discard-widget-button-text {
+                color: hsl(0, 0%, 18%);
             }
         }
 
